# application_manager

./: .env  .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
app/: config.py  dao.py  database.py  main.py
app/programs/: dao.py  manager.py  models.py  router.py  schema.py
app/sockets/: page.html  repeat_every.py  router.py  socket_server.py
app/static/: index.html  notification_page.html
migrations/: env.py
migrations/versions/: 667d3a8cffc2_add_programs_and_history_tabels.py  db4a508a3934_rename_history_field.py  f4a57453f3bf_create_program_and_history_tables.py
