[tool.poetry]
name = "apps-manipulating"
version = "0.1.0"
description = ""
authors = ["egorlomasov <egorka.lomasov@gmail.com>"]
readme = "README.md"
packages = [{include = "apps_manipulating"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
asyncpg = "^0.28.0"
python-socketio = "^5.9.0"
sqlalchemy = "^2.0.21"
psutil = "^5.9.5"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pyright = "^1.1.329"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
